phase5-architecture-refactor/kong-ha/kong-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-admin-api
  namespace: kong
spec:
  ingressClassName: haproxy
  rules:
    - host: kong-admin.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-kong-admin
                port:
                  number: 8001
